[GREEN] Fixed tests