@@ -1,24 +1,25 @@
 package id.ac.ui.cs.advprog.papikos.house.management.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import id.ac.ui.cs.advprog.papikos.auth.entity.User;
+import id.ac.ui.cs.advprog.papikos.auth.repository.UserRepository;
 import id.ac.ui.cs.advprog.papikos.house.management.service.HouseManagementService;
 import id.ac.ui.cs.advprog.papikos.house.model.House;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
+import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.test.web.servlet.MockMvc;
+
+import java.util.*;
 
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
-
-import org.springframework.beans.factory.annotation.Autowired;
-
-import java.util.Arrays;
-import java.util.Optional;
 
 @SpringBootTest
 @AutoConfigureMockMvc(addFilters = false)
@@ -30,37 +31,48 @@ class HouseManagementControllerTest {
     @MockBean
     private HouseManagementService houseManagementService;
 
+    @MockBean
+    private UserRepository userRepository;
+
     @Autowired
     private ObjectMapper objectMapper;
 
     private House house;
+    private User owner;
+    private UserDetails userDetails;
 
     @BeforeEach
     void setUp() {
-        house = new House();
+        owner = new User();
+        owner.setId(1L);
+        owner.setEmail("owner@example.com");
+
+        userDetails = mock(UserDetails.class);
+        when(userDetails.getUsername()).thenReturn("owner@example.com");
+
+        house = new House("Kos A", "Jl. UI", "Dekat kampus", 10, 1500000.0,
+                "https://example.com/img.jpg", owner);
         house.setId(1L);
-        house.setName("Kos A");
-        house.setAddress("Jl. UI");
-        house.setDescription("Dekat kampus");
-        house.setNumberOfRooms(10);
-        house.setMonthlyRent(1500000.0);
-        house.setImageUrl("https://example.com/img.jpg");
+
+        when(userRepository.findByEmail("owner@example.com")).thenReturn(Optional.of(owner));
     }
 
     @Test
-    void testCreateHousePage() throws Exception {
-        when(houseManagementService.findAll()).thenReturn(Arrays.asList(house));
+    void testGetAllHouses() throws Exception {
+        when(houseManagementService.findAllByOwner(owner)).thenReturn(List.of(house));
 
-        mockMvc.perform(get("/api/management/houses"))
+        mockMvc.perform(get("/api/management/houses")
+                        .principal(() -> "owner@example.com")) // inject principal
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$[0].name").value("Kos A"));
     }
 
     @Test
-    void testCreateHousePost() throws Exception {
+    void testCreateHouse() throws Exception {
         doNothing().when(houseManagementService).addHouse(any(House.class));
 
         mockMvc.perform(post("/api/management/houses")
+                        .principal(() -> "owner@example.com")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(house)))
                 .andExpect(status().isOk())
@@ -68,30 +80,21 @@ class HouseManagementControllerTest {
     }
 
     @Test
-    void testManagementPage() throws Exception {
-        when(houseManagementService.findById(1L)).thenReturn(Optional.of(house));
+    void testGetHouseById_ValidOwner() throws Exception {
+        when(houseManagementService.findByIdAndOwner(1L, owner)).thenReturn(Optional.of(house));
 
-        mockMvc.perform(get("/api/management/houses/1"))
+        mockMvc.perform(get("/api/management/houses/1")
+                        .principal(() -> "owner@example.com"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.name").value("Kos A"));
     }
 
     @Test
-    void testEditHousePage() throws Exception {
+    void testUpdateHouse_ValidOwner() throws Exception {
         when(houseManagementService.findById(1L)).thenReturn(Optional.of(house));
 
         mockMvc.perform(put("/api/management/houses/1")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(house)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.name").value("Kos A"));
-    }
-
-    @Test
-    void testEditHousePost() throws Exception {
-        when(houseManagementService.findById(1L)).thenReturn(Optional.of(house));
-
-        mockMvc.perform(put("/api/management/houses/1")
+                        .principal(() -> "owner@example.com")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(house)))
                 .andExpect(status().isOk())
@@ -101,10 +104,11 @@ class HouseManagementControllerTest {
     }
 
     @Test
-    void testDeleteHouse() throws Exception {
-        doNothing().when(houseManagementService).deleteHouse(1L);
+    void testDeleteHouse_ValidOwner() throws Exception {
+        when(houseManagementService.findById(1L)).thenReturn(Optional.of(house));
 
-        mockMvc.perform(delete("/api/management/houses/1"))
+        mockMvc.perform(delete("/api/management/houses/1")
+                        .principal(() -> "owner@example.com"))
                 .andExpect(status().isNoContent());
 
         verify(houseManagementService, times(1)).deleteHouse(1L);
